fixed portfolio layout bugs

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -38,7 +38,8 @@ body {
 
 .card {
   float: left;
-  width: 33.333%;
+  width: 100%;
+  height: inherit;
   padding: .75rem;
   margin-bottom: 2rem;
   border: 0;
